# milionaire

./: .gitignore  2.session  QMilion.pro  README  kmilion.xcf  milionaire.prj  uml
KMilion/: CMakeLists.txt  KMilion.kdev4
KMilion/src/: .directory  CMakeLists.txt  Quest.cpp  Quest.h  QuestionShow.cpp  QuestionShow.h  Questions.cpp  Questions.h  QuizEdit.cpp  QuizEdit.h  QuizEdit.ui  QuizShow.cpp  QuizShow.h  QuizShow.ui  README  README~  ShowQuiz.cpp  kmilion.cpp  kmilion.desktop  kmilion.h  kmilion.kcfg  kmilionui.rc  main.cpp  resource.qrc  settings.kcfgc
QMilion/: MainWindow.cpp  MainWindow.h  Makefile  QMilion.pro  Quest.h  QuestionShow.cpp  QuestionShow.h  Questions.cpp  Questions.h  QuizEdit.cpp  QuizEdit.h  QuizEdit.ui  QuizShow.cpp  QuizShow.h  QuizShow.ui  README  fizyka1.xml  kmilionview.cpp  kmilionview.h  main.cpp  moc_MainWindow.cpp  moc_QuizEdit.cpp  moc_QuizShow.cpp  proba.xml  qmilion  qrc_resource.cpp  resource.qrc  testowy3.xml  ui_QuizEdit.h  ui_QuizShow.h
Questions/: Makefile  Quest.cpp  Quest.h  Questions  Questions.cpp  Questions.h  Questions.pro  main.cpp  przetworzony.xml  testowy.xml
QuizEdit/: Makefile  QuestE.cpp  QuestE.h  QuestionsE.cpp  QuestionsE.h  QuizEdit  QuizEdit.cpp  QuizEdit.h  QuizEdit.pro  QuizEdit.pro.backup  QuizEdit.ui  main.cpp  moc_QuizEdit.cpp  questeditor.cpp  questeditor.h  questeditor.ui  ui_QuizEdit.h  ui_questeditor.h
QuizShow/: Makefile  QuestionShow.cpp  QuestionShow.h  Questions.h  QuizShow  QuizShow.cpp  QuizShow.h  QuizShow.pro  QuizShow.ui  main.cpp  moc_QuizShow.cpp  qrc_resource.cpp  resource.qrc  (+2 more)
(+17 files in other folders)
